workflow: simplify caching

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -15,22 +15,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/cache@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
         with:
-          path: ./.venv_ipyvizzu_story
-          key: venv-ipyvizzu-story-${{ github.run_id }}
+          fetch-depth: 1
 
-      - uses: actions/cache@v3
+      - name: Cache repo
+        uses: actions/cache@v3
         with:
-          path: ./node_modules
-          key: nodemodules-ipyvizzu-story-${{ github.run_id }}
+          path: |
+            ./*
+            !.git
+          key: ipyvizzu-story-${{ github.run_id }}
 
-      - uses: actions/cache@v3
+      - name: Cache coverage
+        uses: actions/cache@v3
         with:
           path: ./tests/coverage
-          key: coverage-ipyvizzu-story-${{ github.run_id }}
+          key: ipyvizzu-story-coverage-${{ github.run_id }}
 
       - name: Touch dev environment
         run: make touch-dev
@@ -48,7 +50,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
 
       - name: Get workflow ID
         id: workflow_id
@@ -70,20 +75,19 @@ jobs:
           run_id=$(echo $run_data | jq -r '.workflow_runs[0].id')
           echo "run_id=${run_id}" >> $GITHUB_OUTPUT
 
-      - uses: actions/cache@v3
+      - name: Cache repo
+        uses: actions/cache@v3
         with:
-          path: ./.venv_ipyvizzu_story
-          key: venv-ipyvizzu-story-${{ steps.run_id.outputs.run_id }}
+          path: |
+            ./*
+            !.git
+          key: ipyvizzu-story-${{ steps.run_id.outputs.run_id }}
 
-      - uses: actions/cache@v3
-        with:
-          path: ./node_modules
-          key: nodemodules-ipyvizzu-story-${{ steps.run_id.outputs.run_id }}
-
-      - uses: actions/cache@v3
+      - name: Cache coverage
+        uses: actions/cache@v3
         with:
           path: ./tests/coverage
-          key: coverage-ipyvizzu-story-${{ steps.run_id.outputs.run_id }}
+          key: ipyvizzu-story-coverage-${{ steps.run_id.outputs.run_id }}
 
       - name: Touch dev environment
         run: make touch-dev
@@ -95,6 +99,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: jimporter/mike
+          fetch-depth: 1
           path: mike
 
       - name: Install mike
