--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -7,9 +7,7 @@ on:
   workflow_call:
 
 jobs:
-
   create_doc:
-
     if: ${{ !((github.event_name == 'release' && github.event.action == 'published') || github.event_name == 'workflow_dispatch') }}
 
     runs-on: ubuntu-latest
@@ -20,31 +18,38 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Cache repo
+      - name: Cache dev-py environment
         uses: actions/cache@v3
         with:
-          path: |
-            ./*
-            !.git
-          key: ipyvizzu-story-${{ github.run_id }}
+          path: .venv_ipyvizzu_story
+          key: dev-py-${{ hashFiles('dev-requirements.txt') }}
+
+      - name: Init dev-py environment
+        run: |
+          make check-dev-py
+          make dev-py
+
+      - name: Cache dev-js environment
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: dev-js-${{ hashFiles('package-lock.json') }}
+
+      - name: Init dev-js environment
+        run: |
+          make check-dev-js
+          make dev-js
 
       - name: Cache coverage
         uses: actions/cache@v3
         with:
           path: ./tests/coverage
-          key: ipyvizzu-story-coverage-${{ github.run_id }}
-
-      - name: Touch dev environment
-        run: make touch-dev
-
-      - name: Touch dev-js environment
-        run: make touch-dev-js
+          key: coverage-${{ github.run_id }}
 
       - name: Build documentation
         run: make doc
 
   publish_doc:
-
     if: ${{ ((github.event_name == 'release' && github.event.action == 'published') || github.event_name == 'workflow_dispatch') }}
 
     runs-on: ubuntu-latest
@@ -54,6 +59,28 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
+
+      - name: Cache dev-py environment
+        uses: actions/cache@v3
+        with:
+          path: .venv_ipyvizzu_story
+          key: dev-py-${{ hashFiles('dev-requirements.txt') }}
+
+      - name: Init dev-py environment
+        run: |
+          make check-dev-py
+          make dev-py
+
+      - name: Cache dev-js environment
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: dev-js-${{ hashFiles('package-lock.json') }}
+
+      - name: Init dev-js environment
+        run: |
+          make check-dev-js
+          make dev-js
 
       - name: Get workflow ID
         id: workflow_id
@@ -75,25 +102,11 @@ jobs:
           run_id=$(echo $run_data | jq -r '.workflow_runs[0].id')
           echo "run_id=${run_id}" >> $GITHUB_OUTPUT
 
-      - name: Cache repo
-        uses: actions/cache@v3
-        with:
-          path: |
-            ./*
-            !.git
-          key: ipyvizzu-story-${{ steps.run_id.outputs.run_id }}
-
       - name: Cache coverage
         uses: actions/cache@v3
         with:
           path: ./tests/coverage
-          key: ipyvizzu-story-coverage-${{ steps.run_id.outputs.run_id }}
-
-      - name: Touch dev environment
-        run: make touch-dev
-
-      - name: Touch dev-js environment
-        run: make touch-dev-js
+          key: coverage-${{ steps.run_id.outputs.run_id }}
 
       - name: Checkout mike
         uses: actions/checkout@v3
