--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
+  "name": "ipyvizzu-story-dev",
+  "description": "ipyvizzu-story development",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check": "npm-run-all check-prettier check-eslint",
+    "prettier": "prettier -w docs/ tools/ .github/",
+    "check-prettier": "prettier -c docs/ tools/ .github/",
+    "eslint": "eslint --ext .js,.cjs,.mjs -c .eslintrc.cjs --fix docs/",
+    "check-eslint": "eslint --ext .js,.cjs,.mjs -c .eslintrc.cjs docs/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vizzuhq/ipyvizzu-story.git"
+  },
+  "homepage": "https://ipyvizzu-story.vizzuhq.com",
+  "url": "https://github.com/vizzuhq/ipyvizzu-story/issues",
+  "author": "Vizzu Inc.",
+  "license": "Apache-2.0",
   "dependencies": {
-    "ipyvizzu-story-dev": "file:tools/javascripts"
+    "npm-run-all": "*",
+    "prettier": "*",
+    "eslint": "*",
+    "eslint-config-standard": "*",
+    "eslint-config-prettier": "*"
   }
 }
