--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,81 @@ ipyvizzu = "src/ipyvizzustory"
 source = "file"
 path = "src/ipyvizzustory/__version__.py"
 
+[tool.pdm.scripts]
+init_py = "pdm install"
+init_js = "npm install"
+
+init_src = {composite = ["init_py"]}
+init_docs = {composite = ["init"]}
+init_tools = {composite = ["init"]}
+
+init = {composite = ["pkg_install", "init_py", "init_js"]}
+
+
+lock_py = "pdm lock --no-default -d"
+lock_js = "npm update"
+
+lock = {composite = ["lock_py", "lock_js"]}
+
+
+fix_format_black = "black"
+format_black = "black --diff --check"
+fix_format_mdformat = "python ./tools/ci/std_check.py mdformat --wrap 80 --end-of-line keep --line-length 70"
+format_mdformat = "python ./tools/ci/std_check.py mdformat --wrap 80 --end-of-line keep --line-length 70 --check"
+fix_format_prettier = "npx prettier -w"
+format_prettier = "npx prettier -c" 
+
+fix_format_src = {composite = ["fix_format_black src tests"]}
+format_src = {composite = ["format_black src tests"]}
+fix_format_docs = {composite = ["fix_format_mdformat docs README.md CONTRIBUTING.md CODE_OF_CONDUCT.md", "fix_format_prettier docs"]}
+format_docs = {composite = ["format_mdformat docs README.md CONTRIBUTING.md CODE_OF_CONDUCT.md", "format_prettier docs"]}
+fix_format_tools = {composite = ["fix_format_black tools", "fix_format_black -l 70 docs", "fix_format_prettier package.json tools .github"]}
+format_tools = {composite = ["format_black tools", "format_black -l 70 docs", "format_prettier package.json tools .github"]}
+
+fix_format = {composite = ["fix_format_src", "fix_format_docs", "fix_format_tools"]}
+format = {composite = ["format_src", "format_docs", "format_tools"]}
+
+
+lint_pylint = "pylint"
+fix_lint_eslint = "npx eslint --ext .js,.cjs,.mjs --fix"
+lint_eslint = "npx eslint --ext .js,.cjs,.mjs"
+
+lint_src = {composite = ["lint_pylint src tests"]}
+fix_lint_docs = {composite = ["fix_lint_eslint docs"]}
+lint_docs = {composite = ["lint_eslint docs"]}
+lint_tools = {composite = ["lint_pylint tools"]}
+
+fix_lint = {composite = ["fix_lint_docs"]}
+lint = {composite = ["lint_src", "lint_docs", "lint_tools"]}
+
+
+type_mypy = "mypy"
+
+type_src = {composite = ["type_mypy src tests"]}
+type_tools = {composite = ["type_mypy tools"]}
+
+type = {composite = ["type_src", "type_tools"]}
+
+
+test = "tox"
+
+
+ci_src = {composite = ["format_src", "lint_src", "type_src", "test"]}
+ci_docs = {composite = ["format_docs", "lint_docs"]}
+ci_tools = {composite = ["format_tools", "lint_tools", "type_tools"]}
+
+ci = {composite = ["ci_src", "ci_docs", "ci_tools"]}
+
+
+docs_build = "mkdocs build -f ./tools/docs/mkdocs.yml"
+docs_deploy = {composite = ["pip install ipyvizzu --upgrade", "python ./tools/docs/deploy.py"]}
+
+
+pkg_install = "pip install -e ."
+pkg_build = {composite = ["python ./tools/ci/version.py False", "pdm build"]}
+pkg_check = "twine check dist/*.tar.gz dist/*.whl"
+pkg_release = {composite = ["pkg_build", "pkg_check", "python ./tools/ci/version.py True"]}
+
 [tool.tox]
 legacy_tox_ini = """
 [tox]
