--- a/pyproject.toml
+++ b/pyproject.toml
@@ -179,6 +179,7 @@ codequality = [
     "black[jupyter] ; python_version >= '3.10'",
     "pylint ; python_version >= '3.10'",
     "mypy ; python_version >= '3.10'",
+    "ddt ; python_version >= '3.10'",
     "tox ; python_version >= '3.10'",
 ]
 env = [
