--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "eslint-config-prettier": "*"
   },
   "prettier": {
-    "printWidth": 80,
-    "endOfLine": "auto"
+    "semi": false,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "printWidth": 100,
+    "trailingComma": "none"
   },
   "eslintConfig": {
     "env": {
@@ -31,6 +34,9 @@
     "extends": [
       "standard",
       "prettier"
-    ]
+    ],
+    "parserOptions": {
+      "ecmaVersion": "latest"
+    }
   }
 }
