--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
 
     steps:
       - name: Checkout repo
@@ -151,7 +151,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.6"]
+        python-version: ['3.6']
 
     steps:
       - name: Checkout repo
@@ -174,7 +174,7 @@ jobs:
       - name: Set up Python 3.6
         uses: actions/setup-python@v4
         with:
-          python-version: "3.6"
+          python-version: '3.6'
 
       - name: Test
         run: |
