--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.6"
 dependencies = [
-    "ipyvizzu",
+    "ipyvizzu<1.0.0"
 ]
 license = {text = "Apache-2.0"}
 classifiers = [
