--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,7 +167,6 @@ commands =
 
 [tool.pdm.dev-dependencies]
 packagetool = [
-    "pdm==2.8.0 ; python_version >= '3.10'",
     "twine ; python_version >= '3.10'"
 ]
 packagedeps = [
@@ -213,7 +212,7 @@ docs = [
     "mkdocstrings[python] ; python_version >= '3.10'",
     "mkdocs-gen-files ; python_version >= '3.10'",
     "mkdocs-coverage ; python_version >= '3.10'",
-    "mike @ git+https://github.com/jimporter/mike.git@master",
+    "mike ; python_version >= '3.10'",
 ]
 
 [tool.pylint.messages-control]
