--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -26,7 +26,7 @@ jobs:
           python3.10 -m venv ".venv"
           source .venv/bin/activate
           pip install pdm==2.8.0
-          pdm run init_py
+          pdm install
 
       - name: Cache dev-js environment
         id: cache_dev_js_ubuntu22
@@ -39,8 +39,7 @@ jobs:
         if: steps.cache_dev_js_ubuntu22.outputs.cache-hit != 'true'
         run: |
           source .venv/bin/activate
-          pdm run init_js
-
+          npm install
   init_pkg:
     runs-on: ubuntu-22.04
     needs: init_dev_ubuntu22
@@ -60,17 +59,12 @@ jobs:
       - name: Install package
         run: |
           source .venv/bin/activate
-          pdm run pkg_install
+          pdm run deploy
 
       - name: Build package
         run: |
           source .venv/bin/activate
-          pdm run pkg_build
-
-      - name: Check package
-        run: |
-          source .venv/bin/activate
-          pdm run pkg_check
+          pdm run build
 
       - name: Cache package
         uses: actions/cache@v3
