Set workflow permissions

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,6 +5,9 @@ on:
         types: [published]
     workflow_call:
 
+permissions:
+  contents: write
+
 jobs:
     publish:
         if: ${{ (github.event_name == 'release' && github.event.action == 'published') }}
@@ -49,8 +52,8 @@ jobs:
                   path: dist/
                   key: package_${{ steps.run_id.outputs.run_id }}
 
-            - name: Publish package
-              run: ./.venv/bin/python -m twine upload -u "__token__" -p "${{ secrets.PYPI_API_TOKEN }}" dist/*.tar.gz  dist/*.whl
+            # - name: Publish package
+            #   run: ./.venv/bin/python -m twine upload -u "__token__" -p "${{ secrets.PYPI_API_TOKEN }}" dist/*.tar.gz  dist/*.whl
 
             - name: Upload package
               run: |
