--- a/tools/docs/mkdocs.yml
+++ b/tools/docs/mkdocs.yml
@@ -2,7 +2,7 @@ strict: true
 
 site_name: ipyvizzu-story
 site_url: https://ipyvizzu-story.vizzuhq.com
-copyright: Copyright &copy; 2022-2023 Vizzu Inc.
+copyright: Copyright &copy; 2022-2025 Vizzu Inc.
 
 docs_dir: ../../docs
 site_dir: ../../site
@@ -79,7 +79,8 @@ plugins:
           redirect_template: ./tools/docs/overrides/mike/redirect.html
     - search
     - section-index
-    - autorefs
+    - autorefs:
+          resolve_closest: true
     - mkdocstrings:
           enable_inventory: true
           handlers:
@@ -99,7 +100,7 @@ plugins:
               - examples/gen_examples.py
               - reference/gen_reference.py
     - coverage:
-          page_name: coverage
+          page_path: coverage
           html_report_dir: .coverage/html
     - literate-nav:
           implicit_index: true
